# writing-tool

./: .coverage  .gitignore  README.md  SKILL.md  install.sh  justfile  pyproject.toml
tests/: test_cli.py  test_cli_edge.py  test_cli_extract.py  test_extractor.py  test_interactive.py  test_scanner.py  test_store.py
writing_tool/: __main__.py  cli.py  config.py  extractor.py  interactive.py  scanner.py  server.py  skill_installer.py  store.py
writing_tool/skill_templates/: SKILL.md
writing_tool/skill_templates/references/: COMMANDS.md  EXAMPLES.md  SCHEMA.md
writing_tool/skill_templates/scripts/: analyze-file.py  extract.py  query-graph.py  show-entity.py
writing_tool/web/: index.html
