[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "writing-tool"
version = "0.2.0"
description = "CLI tool for fiction writers — LLM-powered NER, graph-based entity/relationship tracking"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "pyyaml>=6.0",
    "litellm>=1.50",
    "flask>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
wt = "writing_tool.cli:cli"

[tool.setuptools.packages.find]
include = ["writing_tool*"]

[tool.setuptools.package-data]
"writing_tool" = ["web/*.html", "skill_templates/**/*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
exclude = ["skill_templates"]

[tool.pytest.ini_options]
testpaths = ["tests"]
